--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -39,7 +39,9 @@
           {% if user.is_authenticated %}
       
           <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
+            <a class="nav-link" href="/logout">            
+              <button type="submit" class="btn btn-outline-danger">Logout</button>
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Welcome, {{user.username}}</a>
@@ -48,7 +50,9 @@
           {% else %}
 
           <li class="nav-item">
-            <a class="nav-link" href="accounts/login">Login</a>
+            <a class="nav-link" href="accounts/login">
+              <button type="submit" class="btn btn-outline-danger">Login</button>
+            </a>
           </li>
 
           {% endif %}
