--- a/restaurants/templates/register.html
+++ b/restaurants/templates/register.html
@@ -62,7 +62,7 @@
     <form method="POST">
       {% csrf_token %}
       {{ register_form|crispy }}                    
-      <button class="btn btn-primary" type="submit">Register</button>
+      <button class="btn btn-outline-danger " type="submit">Register</button>
     </form>
     <p class="text-center">If you already have an account, <a href="accounts/login">login</a> instead.</p>
   </div>
