--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -55,6 +55,12 @@
             </a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" href="/register">
+              <button type="submit" class="btn btn-outline-danger">Sign Up</button>
+            </a>
+          </li>
+
           {% endif %}
           
         </ul>
