--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!--Bootstrap CSS-->
   <meta charset="utf-8">
@@ -38,7 +39,7 @@
       </form>
 
       <div class="collapse navbar-collapse" id="navbarNav">
-      <h5 class="card-header">Overview</h5>
+        <h5 class="card-header">Overview</h5>
 
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -58,6 +59,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
 </head>
+
 <body style="font-family: 'Rubik', sans-serif;">
   <!--Bootstrap JS-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
@@ -200,6 +202,7 @@
       position: relative;
       color: #0087ca;
     }
+
     .hover-underline-animation::after {
       content: '';
       position: absolute;
@@ -212,6 +215,7 @@
       transform-origin: bottom right;
       transition: transform 0.25s ease-out;
     }
+
     .hover-underline-animation:hover::after {
       transform: scaleX(1);
       transform-origin: bottom left;
@@ -325,217 +329,184 @@
             {% endfor %}
             <h5 class="card-title">
 
+              <h5 class="card-title">
 
-
-
-
-
-
-
-
-
-
-
-
-  <h5 class="card-title">
-
+                {%if rating is None%}
+                No Reviews
+                {% elif rating is 1%}
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                {% elif rating is 2%}
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                {% elif rating is 3%}
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                {% elif rating is 4%}
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                {% elif rating is 5%}
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                {% endif %}
+              </h5>
               {%if rating is None%}
-              No Reviews
-              {% elif rating is 1%}
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              {% elif rating is 2%}
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              {% elif rating is 3%}
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              {% elif rating is 4%}
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              {% elif rating is 5%}
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              {% endif %}
-            </h5>
-            {%if rating is None%}
               <p class="card-text">This restaurant has not yet been rated</p>
-            {% else %}
+              {% else %}
               <p class="card-text">This restaurant has an average rating of {{rating}}.0</p>
-            {%endif%}
-            <button class="btn btn-outline-danger" style=" border-color: red; hover-color: white;"
-              data-bs-dismiss="modal" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Write a
-              Review</button>
+              {%endif%}
+              <button class="btn btn-outline-danger" style=" border-color: red; hover-color: white;"
+                data-bs-dismiss="modal" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Write a
+                Review</button>
           </div>
         </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-   <h5 class="card-title">
-
-        <br>
-        {% for review in reviews%}
-        <div class="card">
-          <div class="card-header">
-            {{review.reviewer}}
+        <h5 class="card-title">
+          <br>
+          {% for review in reviews%}
+          <div class="card">
+            <div class="card-header">
+              {{review.reviewer}}
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">
+                {%if rating is None%}
+                No Reviews
+                {% elif review.rating is 1%}
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                {% elif review.rating is 2%}
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                {% elif review.rating is 3%}
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                {% elif review.rating is 4%}
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: #999" class="fa fa-star"></i>
+                {% elif review.rating is 5%}
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                <i style="color: gold" class="fa fa-star"></i>
+                {% endif %}
+              </h5>
+              <p class="card-text">{{review.review}}</p>
+            </div>
+            <div class="card-footer text-muted">
+              {{review.created_at}}
+            </div>
           </div>
-          <div class="card-body">
-            <h5 class="card-title">
-              {%if rating is None%}
-              No Reviews
-              {% elif review.rating is 1%}
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              {% elif review.rating is 2%}
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              {% elif review.rating is 3%}
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              {% elif review.rating is 4%}
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: #999" class="fa fa-star"></i>
-              {% elif review.rating is 5%}
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              <i style="color: gold" class="fa fa-star"></i>
-              {% endif %}
-            </h5>
-            <p class="card-text">{{review.review}}</p>
-          </div>
-          <div class="card-footer text-muted">
-            {{review.created_at}}
-          </div>
-        </div>
-        <br>
-        {% endfor %}
+          <br>
+          {% endfor %}
 
       </div>
     </div>
   </div>
 </div>
 
+
 <!-- FORM -->
 <div class="modal fade" id="exampleModalToggle2" aria-labelledby="exampleModalToggleLabel2" tabindex="-1"
   style="display: none;" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-
-
-
-
-
-
-
-
-   <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Write Your Review</h1
-
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Write Your Review</h1>
     <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Write Your Review</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
+    <div class="modal-header">
+      <h1 class="modal-title fs-5" id="exampleModalToggleLabel2">Write Your Review</h1>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body">
+      {% block content %}
+      <form method="post" action="{% url 'review_submit' %}">
+        {% csrf_token %}
+        <!-- Restaurant -->
+        <div class="form-group">
+          <label for="restaurant" class="col-sm-2 col-form-label">Restaurant:</label>
+          <div class="col-sm-10">
+            <input type="text" name="restaurant" readonly class="form-control-plaintext" id="restaurant"
+              value="{{name}}">
+          </div>
+        </div>
 
-        {% block content %}
-        <form method="post" action="{% url 'review_submit' %}">
-          {% csrf_token %}
-          <!-- Restaurant -->
-          <div class="form-group">
-            <label for="restaurant" class="col-sm-2 col-form-label">Restaurant:</label>
-            <div class="col-sm-10">
-              <input type="text" name = "restaurant" readonly class="form-control-plaintext" id="restaurant" value="{{name}}">
-            </div>
+        <!-- Username -->
+        <div class="form-group">
+          <label for="username" class="col-sm-2 col-form-label">Username:</label>
+          <div class="col-sm-10">
+            <input type="text" name="reviewer" readonly class="form-control-plaintext" id="username"
+              value="{{ user.username }}">
           </div>
-
-          <!-- Username -->
-          <div class="form-group">
-            <label for="username" class="col-sm-2 col-form-label">Username:</label>
-            <div class="col-sm-10">
-              <input type="text" name = "reviewer" readonly class="form-control-plaintext" id="username" value="{{ user.username }}">
-            </div>
-          </div>
-          <!-- Rating 1-5 -->
-          <div class="form-group">
-            <label for="rating" class="col-sm-2 col-form-label">Rating:</label>
-            <br>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="rating" id="inlineRadio1" value="1">
-              <label class="form-check-label" for="inlineRadio1">1</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="rating" id="inlineRadio2" value="2">
-              <label class="form-check-label" for="inlineRadio2">2</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="rating" id="inlineRadio3" value="3">
-              <label class="form-check-label" for="inlineRadio3">3</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="rating" id="inlineRadio4" value="4">
-              <label class="form-check-label" for="inlineRadio4">4</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="rating" id="inlineRadio5" value="5">
-              <label class="form-check-label" for="inlineRadio5">5</label>
-            </div>
-          </div>
+        </div>
+        <!-- Rating 1-5 -->
+        <div class="form-group">
+          <label for="rating" class="col-sm-2 col-form-label">Rating:</label>
           <br>
-
-          <!-- Review -->
-          <div class="form-group">
-            <label for="review">Review:</label>
-            <textarea class="form-control" id="review" name="review" rows="3"></textarea>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="rating" id="inlineRadio1" value="1">
+            <label class="form-check-label" for="inlineRadio1">1</label>
           </div>
-          <br>
-          <button type="submit" class="btn btn-outline-danger" style=" border-color: red; hover-color: white;">Submit</button>
-        </form>
-        {% endblock %}
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="rating" id="inlineRadio2" value="2">
+            <label class="form-check-label" for="inlineRadio2">2</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="rating" id="inlineRadio3" value="3">
+            <label class="form-check-label" for="inlineRadio3">3</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="rating" id="inlineRadio4" value="4">
+            <label class="form-check-label" for="inlineRadio4">4</label>
+          </div>
+          <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="rating" id="inlineRadio5" value="5">
+            <label class="form-check-label" for="inlineRadio5">5</label>
+          </div>
+        </div>
+        <br>
+        <!-- Review -->
+        <div class="form-group">
+          <label for="review">Review:</label>
+          <textarea class="form-control" id="review" name="review" rows="3"></textarea>
+        </div>
+        <br>
+        <button type="submit" class="btn btn-outline-danger"
+          style=" border-color: red; hover-color: white;">Submit</button>
+      </form>
+      {% endblock %}
 
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-outline-danger" style=" border-color: red; hover-color: white;" data-dismiss="modal" data-bs-target="#exampleModalToggle"
-          data-bs-toggle="modal">&#x2190; Go Back</button>
-      </div>
+    </div>
+    <div class="modal-footer">
+      <button class="btn btn-outline-danger" style=" border-color: red; hover-color: white;" data-dismiss="modal"
+        data-bs-target="#exampleModalToggle" data-bs-toggle="modal">&#x2190; Go Back</button>
     </div>
   </div>
+</div>
 </div>
