--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -94,6 +94,9 @@
               <h5 style="color: red;" class="card-text"><u>{{restaurant.uber_delivery_time}}</u></h5>
               {% endif %}
           </div>
+          <form action="{{restaurant.uberlink}}" method="get" target="_blank">
+            <button type="submit">Uber</button>
+         </form>
         </div>
       </div>
       <!-- DoorDash Delivery Time -->
@@ -108,6 +111,9 @@
             <h5 style="color: red;" class="card-text"><u>{{restaurant.doordash_delivery_time}}</u></h5>
             {% endif %}
           </div>
+          <form action="{{restaurant.doordashlink}}" method="get" target="_blank">
+            <button type="submit">DoorDash</button>
+         </form>
         </div>
       </div>
     </div>
