--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -37,15 +37,25 @@
           {% endfor %}
 
           {% if user.is_authenticated %}
-      
+
           <li class="nav-item">
-            <a class="nav-link" href="/logout">            
+            <a class="nav-link" href="/logout">
               <button type="submit" class="btn btn-outline-danger">Logout</button>
             </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Welcome, {{user.username}}</a>
           </li>
+
+          {%for owner in owners%}
+          {% if owner.user == user %}
+            <li class="nav-item">
+              <a class="nav-link" href="owner/dashboard?id={{owner.id}}">
+                <button type="submit" class="btn btn-outline-danger">Owner Dashboard</button>
+              </a>
+            </li>
+          {% endif %}
+          {%endfor%}
 
           {% else %}
 
@@ -62,7 +72,7 @@
           </li>
 
           {% endif %}
-          
+
         </ul>
       </div>
     </div>
@@ -70,7 +80,7 @@
 
 
 
-  
+
   <!--Navbar-->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
