--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -7,12 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--Bootstrap CSS-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="../static/styles/likes.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 
   <!--Bootstrap JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
   <!--Bootstrap JS-->
 
   <!--Navbar-->
@@ -38,24 +41,24 @@
 
 
   <!-- Favorite Button -->
-{% for restaurant in restaurant %}
-<div class="fixed-bottom">
-  <form action="{% url 'favorite' name %}" method="post">
-    {% csrf_token %}
-    {% if user in restaurant.favoriters.all %}
-    <button class="button button-favorite favorited">
-      <i class="fa fa-heart"></i>
-      <span>Favorited</span>
-    </button>
-    {% else %}
-    <button class="button button-favorite">
-      <i class="fa fa-heart"></i>
-      <span>Favorite</span>
-    </button>
-    {%endif%}
-  </form>
-</div>
-{% endfor %}
+  {% for restaurant in restaurant %}
+  <div class="fixed-bottom">
+    <form action="{% url 'favorite' name %}" method="post">
+      {% csrf_token %}
+      {% if user in restaurant.favoriters.all %}
+      <button class="button button-favorite favorited">
+        <i class="fa fa-heart"></i>
+        <span>Favorited</span>
+      </button>
+      {% else %}
+      <button class="button button-favorite">
+        <i class="fa fa-heart"></i>
+        <span>Favorite</span>
+      </button>
+      {%endif%}
+    </form>
+  </div>
+  {% endfor %}
 
   <!-- Name + Banner -->
   {% for restaurant in restaurant %}
@@ -193,6 +196,51 @@
 
   <!-- Banner Info -->
   <!-- Restaurant Info -->
+
+  <div class="accordion" id="accordionPanelsStayOpenExample">
+    {% for category in categories%}
+    <div class="accordion-item">
+      <!-- Heading -->
+      <h2 class="accordion-header" id="panelsStayOpen-heading-{{category}}">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+          data-bs-target="#panelsStayOpen-collapse-{{category}}" aria-expanded="true"
+          aria-controls="panelsStayOpen-collapse-{{catgeory}}">
+          {{category}}
+        </button>
+      </h2>
+
+      <!-- Content  -->
+      <div id="panelsStayOpen-collapse-{{category}}" class="accordion-collapse collapse show"
+        aria-labelledby="panelsStayOpen-heading-{{category}}">
+        <div class="accordion-body">
+          {% for item in menu %}
+          {%if item.type in category%}
+          <div class="col-sm-4" style="padding-bottom: 20px;">
+            <div class="card">
+              <img src="/static/fooditem/{{item.image_name}}" style="height: 300px; object-fit: cover;" class="card-img-top"
+                alt="...">
+              <div class="card-body">
+                <h5 class="card-title">{{item.name}}</h5>
+                {% if item.uber_price < item.doordash_price %} <p style="color:red;" class="card-text">Doordash Price:
+                  {{item.doordash_price}}</p>
+                  <p style="color:green;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
+                  {% else %}
+                  <p style="color:green;" class="card-text">Doordash Price: {{item.doordash_price}}</p>
+                  <p style="color:red;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
+                  {% endif %}
+              </div>
+            </div>
+          </div>
+          {%endif%}
+          {% endfor %}
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+    {%endfor%}
+  </div>
 
   <!--Cards-->
   <!-- Menu -->
