--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -244,6 +244,7 @@
               {% else %}
               <p style="color:green;" class="card-text">Doordash Price: {{item.doordash_price}}</p>
               <p style="color:red;" class="card-text">Uber Eats Price: {{item.uber_price}}</p>
+              <a href="{{data.restaurant.uberlink}}" class="btn btn-outline-danger" style=" border-color: red; hover-color: white;">Menu</a>
               {% endif %}
           </div>
           <!-- Like Button -->
