--- a/restaurants/templates/deals.html
+++ b/restaurants/templates/deals.html
@@ -49,6 +49,19 @@
               <li class="nav-item" style="padding-top: 8px;">
                 <a style = "color: black;" class="nav-link" href="#">Welcome, {{user.username}}</a>
               </li>
+                {% if owner is None %}
+                <li class="nav-item">
+                  <a class="nav-link" href="/owner/register">
+                    <button type="submit" class="btn btn-outline-danger">Register as Owner</button>
+                  </a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                  <a class="nav-link" href="/owner/dashboard?id={{owner.id}}">
+                    <button type="submit" class="btn btn-outline-danger">Owner Dashboard</button>
+                  </a>
+                </li>
+                {%endif%}
 
               <li class="nav-item">
                 <a class="nav-link" href="/logout">
@@ -75,38 +88,44 @@
       </div>
     </div>
   </nav>
+  <!--Navbar-->
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap" rel="stylesheet">
+
 </head>
 
 <body style="font-family: 'Rubik', sans-serif;">
-    <!--Bootstrap JS-->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"></script>
-    <!--Bootstrap JS-->
+  <!--Bootstrap JS-->
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+    crossorigin="anonymous"></script>
+  <!--Bootstrap JS-->
 
-<div style="padding-left:10px;">
-  {% block content %}
-
-  {% load crispy_forms_tags %}
-  <!--Register-->
-  <div class="container py-5">
-    <h1>Register as Owner</h1>
-    <form method="POST">
-      {% csrf_token %}
-      {{ register_form|crispy }}
-      <button class="btn btn-outline-danger " type="submit">Register</button>
-    </form>
+  <!--Cards-->
+  <div class="row" style="padding: 50px">
+    <h3 style="text-align: center; padding-bottom:10px;">Deals</h3>
+    {% for deal in deals %}
+    <div class="col-sm-4" style="padding-bottom: 20px;">
+      <div class="card">
+        <img src="/static/deals/{{deal.image_name}}"
+          style="height: 300px; object-fit: cover;" class="card-img-top " alt="...">
+        <div class="card-body">
+          <h4 class="card-title">{{deal.name}}</h4>
+          <h5 class="card-title">Code: {{deal.code}}</h5>
+          <p>{{deal.restaurant.name}}</p>
+        </div>
+      </div>
+    </div>
+    {%endfor%}
   </div>
-  {% endblock %}
-  </div>
-</div>
 
+
+  <!--Cards-->
 </body>
 
 </html>
