--- a/restaurants/templates/index.html
+++ b/restaurants/templates/index.html
@@ -13,7 +13,6 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 
   <!--Navbar-->
-
   <nav class="navbar navbar-expand-lg navbar-light " style="background-color: rgb(232, 218, 68);">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'index' %}">
@@ -28,14 +27,17 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'deals' %}">Deals</a>
+          </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" style = "color: black;" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Restaurants
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               {% for data in restaurant_rating_data %}
               <li class="nav-item">
-                <a class="nav-link" href="/restaurant/?id={{data.restaurant.name}}">{{data.restaurant.name}}</a>
+                <a class="nav-link" style = "color: black;"  href="/restaurant/?id={{data.restaurant.name}}">{{data.restaurant.name}}</a>
               </li>
           {% endfor %}
             </ul>
@@ -45,7 +47,7 @@
         <ul class="navbar-nav mb-2 mb-lg-0">
           {% if user.is_authenticated %}
               <li class="nav-item" style="padding-top: 8px;">
-                <a class="nav-link" href="#">Welcome, {{user.username}}</a>
+                <a style = "color: black;" class="nav-link" href="#">Welcome, {{user.username}}</a>
               </li>
                 {% if owner is None %}
                 <li class="nav-item">
@@ -86,9 +88,6 @@
       </div>
     </div>
   </nav>
-
-
-
 
   <!--Navbar-->
 
