Fixed Owner Dashboard Bug

--- a/restaurants/templates/owner-dashboard.html
+++ b/restaurants/templates/owner-dashboard.html
@@ -46,7 +46,7 @@
               Restaurants
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              {% for data in restaurant_rating_data %}
+              {% for data in restaurant_rating_data2 %}
               <li class="nav-item">
                 <a class="nav-link" style = "color: black;"  href="/restaurant/?id={{data.restaurant.name}}">{{data.restaurant.name}}</a>
               </li>
