fixed modal toggling issues

--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -464,7 +464,6 @@
   </div>
 </div>
 
-
 <!-- FORM -->
 <div class="modal fade" id="exampleModalToggle2" aria-labelledby="exampleModalToggleLabel2" tabindex="-1"
   style="display: none;" aria-hidden="true">
@@ -534,7 +533,7 @@
 
       </div>
       <div class="modal-footer">
-        <button class="btn btn-outline-danger" style=" border-color: red; hover-color: white;" data-dismiss="modal"
+        <button class="btn btn-outline-danger" style=" border-color: red; hover-color: white;" data-bs-dismiss="modal"
           data-bs-target="#exampleModalToggle" data-bs-toggle="modal">&#x2190; Go Back</button>
       </div>
     </div>
