--- a/restaurants/templates/owner-dashboard.html
+++ b/restaurants/templates/owner-dashboard.html
@@ -409,7 +409,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-primary" data-bs-target="#exampleModalToggle-{{data.restaurant.id}}" data-bs-toggle="modal" data-bs-dismiss="modal">Back to first</button>
+        <button class="btn btn-outline-danger" style=" border-color: red; hover-color: white;" data-bs-dismiss="modal"
+          data-bs-target="#exampleModalToggle-{{data.restaurant.id}}" data-bs-toggle="modal">&#x2190; Go Back</button>
       </div>
     </div>
   </div>
