fixed url not found when trying to login within a restaurant page

--- a/restaurants/templates/restaurant.html
+++ b/restaurants/templates/restaurant.html
@@ -75,7 +75,7 @@
               {% else %}
 
               <li class="nav-item">
-                <a class="nav-link" href="accounts/login">
+                <a class="nav-link" href="/accounts/login">
                   <button type="submit" class="btn btn-outline-danger">Login</button>
                 </a>
               </li>
