--- a/restaurants/templates/register.html
+++ b/restaurants/templates/register.html
@@ -72,7 +72,7 @@
               {% else %}
 
               <li class="nav-item">
-                <a class="nav-link" href="accounts/login">
+                <a class="nav-link" href="/accounts/login">
                   <button type="submit" class="btn btn-outline-danger">Login</button>
                 </a>
               </li>
