Changed Length Requirements for Models

--- a/restaurants/templates/owner-dashboard.html
+++ b/restaurants/templates/owner-dashboard.html
@@ -155,7 +155,7 @@
         <div class="col-sm-3" style="padding-bottom: 10px;">
           <div class="card">
             <div class="card-body">
-              <a style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#exampleModalToggle">
+              <a style="cursor: pointer;">
                 <h5 style="color: black; text-decoration: underline;" class="card-title hover-underline-animation">
                   Average Ratings:</h5>
               </a>
@@ -200,33 +200,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Banner Info -->
-  <style>
-    .hover-underline-animation {
-      display: inline-block;
-      position: relative;
-      color: #0087ca;
-    }
-
-    .hover-underline-animation::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      transform: scaleX(0);
-      height: 2px;
-      bottom: 0;
-      left: 0;
-      background-color: #0087ca;
-      transform-origin: bottom right;
-      transition: transform 0.25s ease-out;
-    }
-
-    .hover-underline-animation:hover::after {
-      transform: scaleX(1);
-      transform-origin: bottom left;
-    }
-  </style>
   <!-- Restaurant Info -->
 
   <!--Cards-->
