Added Link Fields to form

--- a/restaurants/templates/owner-dashboard.html
+++ b/restaurants/templates/owner-dashboard.html
@@ -440,6 +440,16 @@
           </div>
           <br>
           <div class="form-group">
+            <label for="id_doordash_delivery_time"> DoorDash Homepage</label>
+            {{ form.uberlink }}
+          </div>
+          <br>
+          <div class="form-group">
+            <label for="id_doordash_delivery_time"> UberEats Homepage</label>
+            {{ form.doordashlink }}
+          </div>
+          <br>
+          <div class="form-group">
             <label for="id_image_name">Image Name</label>
             <br>
             {{ form.image_name }}
